# emeralddb

./: .gitignore
emeraldb/: CMakeLists.txt
emeraldb/cmake/: dependencies.cmake
emeraldb/src/include/: core.h  ossSocket.h
emeraldb/src/oss/: ossSocket.cpp
emeraldb/test/: test_oss_socket.cpp  test_oss_socket.h
